			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

16-Aug-2003
~~~~~~~~~~~
Added ability to call external programs to generate thumbnails for types 
other than image/* (Stephen Watson).

12-Aug-2003
~~~~~~~~~~~
If a string can't be converted from the local character set to UTF-8,
fallback to converting from iso-8859-1.

07-Aug-2003
~~~~~~~~~~~
Get shared MIME database through Zero Install, if possible.
Bugfix: Didn't use XDG_DATA_DIRS to find type descriptions.

06-Aug-2003
~~~~~~~~~~~
Updated French manual translation (Arnaud Calvo).

02-Aug-2003
~~~~~~~~~~~
Allow types other than image/* to have thumbnails, although we can't 
generate them yet (Stephen Watson).
Added Eject menu option for unmounted mount points (Stephen Watson).

28-Jul-2003
~~~~~~~~~~~
Doing a Refresh in a directory under /uri/0install triggers a remote refresh.

14-Jul-2003
~~~~~~~~~~~
Less frame-heavy look for info box (Thomas Leonard).
When mounting, force a refresh even if the mtime of the new disk is the same,
since some formats don't change it. Also, if mounting gives an error, check to
see if it worked anyway (Thomas Leonard).

13-Jul-2003
~~~~~~~~~~~
Added sort and selection buttons to the toolbar.  They start off disabled,
enable them from Options=>Tools if you want them.  (Stephen Watson)

Escape text/uri-list for drag and drop operations.  (Stephen Watson)

12-Jul-2003
~~~~~~~~~~~
Don't show hidden files on the SendTo menu (reported by Arnaud Calvo).

10-Jul-2003
~~~~~~~~~~~
Added CheckButtons to the info window to allow manipulation of permission 
bits (Stephen Watson).

09-Jul-2003
~~~~~~~~~~~
Added count of directory contents to info window (Stephen Watson).

04-Jul-2003
~~~~~~~~~~~
Updated italian translation in AppInfo.xml and src/po/it.po (Yuri Bongiorno)

30-Jun-2003
~~~~~~~~~~~
When renaming a non-UTF8 file, still assume the directory is valid UTF-8
(reported by Arnaud Calvo).

29-Jun-2003
~~~~~~~~~~~
Sort items on the SendTo menu (requested by John Pettigrew).
