@@ -2,6 +2,12 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+20-Aug-2003
+~~~~~~~~~~~
+Help, Format, Eject and Free Space now appear in the AppMenu section of the
+menu. Help is only shown for applications, and the others only for mount
+points.
+
 16-Aug-2003
 ~~~~~~~~~~~
 Added ability to call external programs to generate thumbnails for types 
